# mitpoker-2024

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  arena.py  config.py  engine.py  requirements.txt
.github/workflows/: arena.yml  lint_and_test.yml
benchmarking/arena/: data.js
cpp_skeleton/: CMakeLists.txt
cpp_skeleton/libs/: CMakeLists.txt
cpp_skeleton/libs/skeleton/: CMakeLists.txt
cpp_skeleton/libs/skeleton/include/skeleton/: actions.h  constants.h  game.h
csrc/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  googletest_test.cpp  run.sh
csrc/bid_everything_bot/: bid_everything_bot.cpp  build.sh  run.sh
csrc/check_or_call_bot/: build.sh  check_or_call_bot.cpp  run.sh
csrc/main_bot/: build.sh  main.cpp  run.sh
csrc/scripts/: CMakeLists.txt  avg_equity_third_card.h  benchmark_equity.cpp  benchmark_poker_hand.cpp  generate_avg_equity_third_card.cpp  generate_evaluator_tables.cpp  generate_rank_bases.cpp  mc_preflop_eqs_3_cards.cpp  poker_hand_benchmark.cpp
csrc/skeleton/: CMakeLists.txt  actions.cpp  actions.h  actions_test.cpp  constants.h  game.h  runner.h  states.cpp  states.h  util.h
csrc/skeleton/include/skeleton/: runner.h
csrc/skeleton/src/: actions.cpp  states.cpp
csrc/src/: actions.cpp  actions.h  actions_test.cpp  auction.cpp  auction.h  auction_test.cpp  card.cpp  card.h  card_test.cpp  cfr.cpp  cfr.h  cfr_test.cpp  constants.h  definitions.h  equity.cpp  equity.h  equity_calculator_test.cpp  equity_test.cpp  equity_third_card.h  equity_third_card_test.cpp  flop_value_generator.cpp  flop_value_generator.h  game.h  game_test.cpp  hand.h  hand_category.h  hand_strength.h  hand_test.cpp  isomorphic_flop_encoder.h  isomorphic_flop_encoder_test.cpp  main.cpp  main_bot.cpp  main_bot.h  main_bot_test.cpp  mccfr.cpp  mccfr.h  mccfr_test.cpp  n_choose_k.h  node_evaluation.cpp  node_evaluation.h  (+20 more)
csrc/uniform_random_bot/: build.sh  run.sh  uniform_random_bot.cpp
scripts/: clang_format_all.sh  install_gcc_11.sh  install_gcc_12.sh
simple_bots/: .clang-format  CMakeLists.txt
simple_bots/bid_everything_bot/: bid_everything_bot.cpp  build.sh  commands.json  run.sh
simple_bots/check_or_call_bot/: build.sh  check_or_call_bot.cpp  run.sh
simple_bots/preflop_all_in_bot/: build.sh  preflop_all_in_bot.cpp  run.sh
simple_bots/uniform_random_bot/: build.sh  run.sh  uniform_random_bot.cpp
